Fixed description spacing

--- a/style/projects.css
+++ b/style/projects.css
@@ -72,7 +72,7 @@ a:visited {
 
 /* mouse over link */
 a:hover {
-  color: grey;
+  color: white;
   text-shadow: 0 0 3px white;
   text-decoration: none;
 }
